--- a/package.json
+++ b/package.json
@@ -4,6 +4,26 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
-  }
+    "mongoose": "^8.18.0",
+    "nodemon": "^3.1.10"
+  },
+  "type": "module",
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shariyerShazan/peesShop-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shariyerShazan/peesShop-server/issues"
+  },
+  "homepage": "https://github.com/shariyerShazan/peesShop-server#readme",
+  "description": ""
 }
